--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,24 @@
 {
-	"name": "acme/demo",
-	"type": "phpbb-extension",
-	"description": "Acme Demo Extension for phpBB 3.1",
-	"homepage": "https://github.com/nickvergessen/phpbb-ext-acme-demo",
-	"version": "0.1.0",
-	"time": "2013-11-05",
-	"licence": "GPL-2.0",
-	"authors": [{
-			"name": "Joas Schilling",
-			"username": "nickvergessen",
-			"email": "nickvergessen@gmx.de",
-			"homepage": "https://github.com/nickvergessen/",
-			"role": "Lead Developer"
-		}],
-	"require": {
-		"php": ">=5.3.3",
-		"phpbb/phpbb": "3.1.*@dev"
-	},
-	"extra": {
-		"display-name": "Acme Demo Extension"
-	}
+    "name": "nachtelb/imprint",
+    "type": "phpbb-extension",
+    "description": "Adds a imprint-page to the board with a link in the footer",
+    "homepage": "tba",
+    "version": "0.1.0",
+    "time": "2013-10-30",
+    "licence": "GPL-2.0",
+    "authors": [
+        {
+            "name": "Bernhard Seibert",
+            "email": "bernh@rdseibert.de",
+            "homepage": "http://nachtelb.de",
+            "role": "Lead Developer"
+        }
+    ],
+    "require": {
+        "php": ">=5.3",
+        "phpbb/phpbb": "3.1.*@dev"
+    },
+    "extra": {
+        "display-name": "nachtelb/Imprint"
+    }
 }
