--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
-demo_controller:
-    pattern: /demo/{name}
-    defaults: { _controller: acme.demo.controller:handle }
+imprint_controller:
+    pattern: /{name}
+    defaults: { _controller: nachtelb.imprint.controller:handle }
