--- a/config/services.yml
+++ b/config/services.yml
@@ -1,11 +1,11 @@
 services:
-    acme.demo.controller:
-        class: acme\demo\controller\main
+    nachtelb.imprint.controller:
+        class: nachtelb\imprint\controller\main
         arguments:
             - @template
             - @controller.helper
-    acme.demo.listener:
-        class: acme\demo\event\main_listener
+    nachtelb.imprint.listener:
+        class: nachtelb\imprint\event\main_listener
         arguments:
             - @controller.helper
             - @template
